@@ -1,8 +1,8 @@
-.TH CHERRYTREE "1" "August 2015" "cherrytree 0.35.10"
+.TH CHERRYTREE "1" "February 2017" "cherrytree 0.38.0"
 .SH NAME
 cherrytree \- a hierarchical note taking application
 .SH SYNOPSIS
-\fBcherrytree [filepath [\-n nodename] [\-x export_to_html_dir] [\-t export_to_txt_dir]]\fP
+\fBcherrytree [filepath [\-n nodename] [\-x export_to_html_dir] [\-t export_to_txt_dir] [\-w]]\fP
 .SH DESCRIPTION
 \fBcherrytree\fP is a hierarchical note taking application, featuring rich
 text, syntax highlighting, images handling, hyperlinks, import/export with
